--- a/style.css
+++ b/style.css
@@ -44,12 +44,27 @@ margin: 0 auto;
     align-items: center;
     width: 100%;
     border-bottom: 4px solid var(--botao-ativo);
-    border-left: 4px solid var(--botao-ativo);
-    border-right: 4px solid var(--botao-ativo);
+    border-left: 2px solid var(--botao-ativo);
+    border-right: 2px solid var(--botao-ativo);
     border-top: none;
 }
+.botao:first-child{
+    border-radius: 40px 40px 0 0 ;
+}
+.botoes{
+    display: block;
+}
+
 @media screen and ( min-width:768px) {
     .botaos{
-        display: flex;
+        display: flex;}
+
+        .botao.botao:first-child{
+            border-radius: 0 40px 0 0 0 ;
+        }
+        .botao:last-child{
+            
+        }
+
     }
-}
+
